# ATMT-AI-Text-Manipulation-Tool-

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: config.rs  main.rs
