[package]
name = "translate_tool"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
async-openai = "0.32.2"
directories = "6.0.0"
enigo = { version = "0.6.1", features = ["serde"] }
global-hotkey = "0.7.0"
native-dialog = "0.9.4"
open = "5.3.3"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tray-icon = "0.21.2"
winit = "0.30.12"
