[package]
name = "translate_tool"
version = "0.1.0"
edition = "2021"
authors = ["Ird Ali irdali1996@gmail.com"]

[dependencies]
arboard = "3.6.1"
directories = "6.0.0"
enigo = { version = "0.6.1", features = ["serde"] }
global-hotkey = "0.7.0"
image = "0.25"
open = "5.3.3"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tray-icon = "0.21.2"
winit = "0.30.12"

[build-dependencies]
winres = "0.1"
